src/index.css
@import url("assets/libraries/hover-min.css");
@tailwind base;
@tailwind components;
@tailwind utilities;
@font-face {
  font-family: Comfortaa;
  src: url(./assets/fonts/Comfortaa/static/Comfortaa-Regular.ttf);
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: Comfortaa;
}

body {
  background-image: url(assets/images/bg/paper.jpg);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
}

/* Global section classes */
.section-container {
  padding-top: 5rem;
  padding-bottom: 5rem;
  overflow: hidden;
}

/* Navbar */
#navbar {
  background-color: transparent;
  transition: top 0.3s;
  position: sticky;
  margin: 0;
  top: 0;
  z-index: 99;
  transition-timing-function: ease-in;
  transition: background 0.1s;
  -webkit-transition: background 0.1s;
  -moz-transition: background 0.1s;
  -ms-transition: background 0.1s;
  -o-transition: background 0.1s;
}
#navbar a {
  color: black;
  border: solid 2px transparent;
}
#navbar .navbar-toggler {
  background-color: white;
}
#navbar .nav-link {
  color: black;
  font-size: 20px;
}
#navbar .nav-link:hover {
  color: rgb(121, 121, 121);
}
/* Jumbotron */
#jumbotron {
  background-color: transparent;
  z-index: 0;
  margin: 0;
}

/* About */
#about {
  background-image: linear-gradient(transparent, white);
}
#about .about-profile-img {
  width: 300px;
}

/* Skills */
#skills .flip-card {
  display: inline-block;
  margin: 20px 0;
}
#skills .flip-card .card-container {
  margin: 0 auto;
  padding: 0 12px;
  perspective: 900px;
  text-align: center;
}
#skills .flip-card .icon-card {
  border-radius: 20%;
  background: none;
  position: relative;
  width: 70px;
  height: 70px;
  transition: all 0.6s ease;
  transform-style: preserve-3d;
}
#skills .flip-card .front,
#skills .flip-card .back {
  position: absolute;
  top: 0;
  left: 0;
  width: 70px;
  height: 70px;
  color: black;
  backface-visibility: hidden;
  -webkit-border-radius: 20%;
  -moz-border-radius: 20%;
  -ms-border-radius: 20%;
  -o-border-radius: 20%;
}
#skills .flip-card .front {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 30px;
}
#skills .flip-card .front-img {
  width: 100%;
}
#skills .flip-card .back {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 18px;
}
#skills .flip-card .back p {
  margin: 0;
}
#skills .flip-card .card-container:hover .icon-card {
  transform: rotateY(180deg);
}
#skills .flip-card .back {
  transform: rotateY(180deg);
}

/* Projects */
#projects {
  background-color: white;
}
#projects .project-card {
  width: 100%;
  height: 500px;
}
#projects .featured-card-img {
  height: 500px;
}
#projects .featured-card-info {
  height: 500px;
}
#projects .project-card-info {
  background-color: rgb(97, 97, 97);
  color: white;
  height: 300px;
  overflow-y: auto;
}
#projects .other-projects-show-btn {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.hidden-el {
  filter: blur(5px);
  opacity: 0;
  transition: all 1s;
  -webkit-transition: all 1s;
  -moz-transition: all 1s;
  -ms-transition: all 1s;
  -o-transition: all 1s;
}

.scale-up-el {
  filter: blur(5px);
  transform: scale(0);
  opacity: 0;
  transition: all 1s;
  -webkit-transition: all 1s;
  -moz-transition: all 1s;
  -ms-transition: all 1s;
  -o-transition: all 1s;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  -o-transform: scale(0);
}

.slide-up-el {
  filter: blur(5px);
  transform: translateY(100%);
  opacity: 0;
  transition: all 1s;
  -webkit-transition: all 1s;
  -moz-transition: all 1s;
  -ms-transition: all 1s;
  -o-transition: all 1s;
  -webkit-filter: blur(5px);
  -webkit-transform: translateY(100%);
  -moz-transform: translateY(100%);
  -ms-transform: translateY(100%);
  -o-transform: translateY(100%);
}

.slide-left-el {
  filter: blur(5px);
  transform: translateX(-50%);
  opacity: 0;
  transition: all 1s;
  -webkit-transition: all 1s;
  -moz-transition: all 1s;
  -ms-transition: all 1s;
  -o-transition: all 1s;
  -webkit-filter: blur(5px);
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  -o-transform: translateX(-50%);
}

.slide-right-el {
  filter: blur(5px);
  transform: translateX(50%);
  opacity: 0;
  transition: all 1s;
  -webkit-transition: all 1s;
  -moz-transition: all 1s;
  -ms-transition: all 1s;
  -o-transition: all 1s;
  -webkit-filter: blur(5px);
  -webkit-transform: translateX(50%);
  -moz-transform: translateX(50%);
  -ms-transform: translateX(50%);
  -o-transform: translateX(50%);
}

.show {
  filter: blur(0);
  transform: translateX(0);
  transform: translateY(0);
  transform: scale(1);
  opacity: 1;
  -webkit-filter: blur(0);
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  -o-transform: scale(1);
}

.auto-show {
  margin-top: -100%;
  opacity: 0;
  animation: auto-show 0.7s 1 ease-in-out forwards;
  -webkit-animation: auto-show 0.7s 1 ease-in-out forwards;
}

@keyframes auto-show {
  50% {
    opacity: 0;
    margin-top: 0;
  }
  100% {
    margin-top: 0;
    opacity: 1;
  }
}
#contact #contact-form-card,
#contact input,
#contact textarea {
  background-color: rgba(255, 255, 255, 0.695);
}
#contact #name,
#contact #email,
#contact #message {
  border-radius: 0;
  border: 0;
  border-bottom: 1.75px solid gray;
  outline: none;
}
#contact #name:hover,
#contact #email:hover,
#contact #message:hover {
  border-bottom: 1.75px solid black;
}
#contact #name:focus,
#contact #email:focus,
#contact #message:focus {
  outline: none;
  border-bottom: 1.75px solid black;
}
#contact #name:focus-within,
#contact #email:focus-within,
#contact #message:focus-within {
  outline: none;
  border-bottom: 1.75px solid black;
}
#contact .form-control:focus {
  box-shadow: unset;
}
#contact #contact-form-card {
  transition: transform 0.25s, box-shadow 0.25s;
}
#contact #contact-form-card:focus-within {
  box-shadow: 0px 20px 30px 12px rgba(0, 0, 0, 0.452);
  transform: scale(1.025);
  transition-timing-function: ease-out;
}

/* Footer */
#footer {
  color: white;
  background-color: rgb(46, 46, 46);
  border-radius: 50px 0;
  -webkit-border-radius: 50px 0;
  -moz-border-radius: 50px 0;
  -ms-border-radius: 50px 0;
  -o-border-radius: 50px 0;
}
#footer .footer-nav-links {
  margin-left: 1rem;
  margin-right: 1rem;
  color: white;
  border-bottom: 2px solid rgba(255, 255, 255, 0);
}
#footer .footer-nav-links:hover {
  color: white;
  text-decoration: none;
  border-bottom: 2px solid white;
}
#footer #footer span {
  margin: 1rem;
  text-decoration: none;
}
#footer #contact-links-section {
  margin-bottom: 1rem;
}
#footer .contact-link-button {
  margin: 1rem;
  color: white;
  text-decoration: none;
}
#footer .contact-link-button:hover {
  color: black;
  background-color: white;
}/*# sourceMappingURL=index.css.map */

